--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,15 @@
         android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
 
         <activity android:name=".SetupActivity">
+
+        </activity>
+
+        <activity android:name=".ide.BuildAlgorithmActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ide.BuildAlgorithmActivity" />
     </application>
 
 </manifest>
