--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,15 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
 
-        <activity android:name=".SetupActivity">
-
-        </activity>
-
-        <activity android:name=".ide.BuildAlgorithmActivity" >
+        <activity android:name=".activity.SetupActivity">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".ide.BuildAlgorithmActivity" >
+
         </activity>
     </application>
 
