--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         </activity>
 
         <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.EditActivity" />
         <activity android:name=".ide.BuildAlgorithmActivity" />
+        <activity android:name=".ide.ViewAlgorithmActivity" />
         
     </application>
 
