--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
         <activity
             android:name=".activity.SetupActivity"
-            android:noHistory="true">
+            android:windowSoftInputMode="stateHidden">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
